// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiBankTransaction has the expected html structure 1`] = `
<li-transaction-stub
  block="3436"
  color="#ED553B"
  time="2042"
>
  <div>
    
      Received 
      
    <b>
      1,234.0000000
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span>
    From A
  </span>
</li-transaction-stub>
`;

exports[`LiBankTransaction should show outgoing transactions 1`] = `
<li-transaction-stub
  block="3438"
  color="#ED553B"
  time="2052"
>
  <div>
    
      Sent 
      
    <b>
      1,234.0000000
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span>
    
        To A
      
  </span>
</li-transaction-stub>
`;

exports[`LiBankTransaction should show transactions sent to the sender 1`] = `
<li-transaction-stub
  block="466"
  color="#ED553B"
  time="1142"
>
  <div>
    
      Sent 
      
    <b>
      1,234.0000000
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span>
    
        To yourself!
      
  </span>
</li-transaction-stub>
`;
